SB related file changes

--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -6,18 +6,18 @@ CXXFLAGS :=  -Wall -g -std=c++11
 SRC_ROOT=$(shell pwd)/../..
 
 prefix?=$(SRC_ROOT)
-INSTALL_LIB_DYMODEL_PATH=$(SRC_ROOT)/lib
-INSTALL_INC_DYMODEL_PATH=$(SRC_ROOT)/include/softbrain-config
-INSTALL_LIB_DYSCHED_PATH=$(SRC_ROOT)/lib
-INSTALL_INC_DYSCHED_PATH=$(SRC_ROOT)/include/softbrain-scheduler
+INSTALL_LIB_SBMODEL_PATH=$(SRC_ROOT)/lib
+INSTALL_INC_SBMODEL_PATH=$(SRC_ROOT)/include/softbrain-config
+INSTALL_LIB_SBSCHED_PATH=$(SRC_ROOT)/lib
+INSTALL_INC_SBSCHED_PATH=$(SRC_ROOT)/include/softbrain-scheduler
 
-LIB_DYMODEL_PATH=../../softbrain-config/lib
-INC_DYMODEL_PATH=../../softbrain-config/src
-LIB_DYSCHED_PATH=../lib
-INC_DYSCHED_PATH=../src
+LIB_SBMODEL_PATH=../../softbrain-config/lib
+INC_SBMODEL_PATH=../../softbrain-config/src
+LIB_SBSCHED_PATH=../lib
+INC_SBSCHED_PATH=../src
 
 
-CXXFLAGS += -I$(INC_DYMODEL_PATH) -I$(INC_DYSCHED_PATH) -Wl,-rpath,$(LIB_DYMODEL_PATH) -Wl,-rpath,$(LIB_DYSCHED_PATH)  -Wl,-rpath,$(INSTALL_LIB_DYMODEL_PATH) -Wl,-rpath,$(INSTALL_LIB_DYSCHED_PATH) 
+CXXFLAGS += -I$(INC_SBMODEL_PATH) -I$(INC_SBSCHED_PATH) -Wl,-rpath,$(LIB_SBMODEL_PATH) -Wl,-rpath,$(LIB_SBSCHED_PATH)  -Wl,-rpath,$(INSTALL_LIB_SBMODEL_PATH) -Wl,-rpath,$(INSTALL_LIB_SBSCHED_PATH) 
 
 
 #all: reschedule stat-config
@@ -26,14 +26,14 @@ all: sb_sched reschedule stat-config
 
 
 reschedule : reschedule.cpp
-	$(CXX) $(CXXFLAGS) -MD -o $@ $< -L$(LIB_DYMODEL_PATH) -L$(LIB_DYSCHED_PATH) -lsbconfig -lsbscheduler
+	$(CXX) $(CXXFLAGS) -MD -o $@ $< -L$(LIB_SBMODEL_PATH) -L$(LIB_SBSCHED_PATH) -lsbconfig -lsbscheduler
 
 stat-config : stat-config.cpp
-	$(CXX) $(CXXFLAGS) -MD -o $@ $< -L$(LIB_DYMODEL_PATH) -L$(LIB_DYSCHED_PATH) -lsbconfig -lsbscheduler
+	$(CXX) $(CXXFLAGS) -MD -o $@ $< -L$(LIB_SBMODEL_PATH) -L$(LIB_SBSCHED_PATH) -lsbconfig -lsbscheduler
 
 sb_sched : sb_sched.cpp
-	$(CXX) $(CXXFLAGS) -MD -o $@ $< -L$(LIB_DYMODEL_PATH) -L$(LIB_DYSCHED_PATH) -lsbconfig -lsbscheduler
+	$(CXX) $(CXXFLAGS) -MD -o $@ $< -L$(LIB_SBMODEL_PATH) -L$(LIB_SBSCHED_PATH) -lsbconfig -lsbscheduler
 
 
 clean:
-	rm -rf *.o  sb_sched stat-config reschedule
+	rm -rf *.o  sb_sched stat-config reschedule *.d
