--- a/src/Makefile
+++ b/src/Makefile
@@ -2,7 +2,7 @@ SYS = $(shell sys)
 CXX = /s/gcc-5.1.0/@sys/bin/g++
 
 CXXFLAGS :=  -Wall -g -std=c++11 -O0 -lm $(FLAGS)
-SOURCES= dypdg.cpp schedule.cpp scheduler.cpp color_mapper.cpp
+SOURCES= sbpdg.cpp schedule.cpp scheduler.cpp color_mapper.cpp
 
 INCLUDE_DEST=../src
 LIB_DEST=../lib
@@ -12,12 +12,12 @@ PRE_OBJECTS=$(SOURCES:.cpp=.o)
 OBJECTS = $(patsubst %,$(OBJ_DEST)/%,$(PRE_OBJECTS))
 
 SRC_ROOT=../..
-LIB_DYMODEL_PATH=$(SRC_ROOT)/softbrain-config/lib
-INC_DYMODEL_PATH=$(SRC_ROOT)/softbrain-config/src
+LIB_SBMODEL_PATH=$(SRC_ROOT)/softbrain-config/lib
+INC_SBMODEL_PATH=$(SRC_ROOT)/softbrain-config/src
 
 all: $(LIB_DEST)/libsbscheduler.a $(LIB_DEST)/libsbscheduler.so
 
-CXXFLAGS += -I$(INC_DYMODEL_PATH)
+CXXFLAGS += -I$(INC_SBMODEL_PATH)
 
 CXXFLAGS += -I$(INCLUDE_DEST) -fPIC -lboost_regex
 
@@ -27,7 +27,7 @@ $(LIB_DEST)/libsbscheduler.a: $(OBJECTS)
 $(LIB_DEST)/libsbscheduler.so: $(OBJECTS)
 	$(CXX) $(CXXFLAGS) -MD -shared -o $@ $^     
 
-$(OBJ_DEST)/scheduler.o: scheduler.cpp multi_model.cpp spill_model.cpp dyser_gams.cpp
+$(OBJ_DEST)/scheduler.o: scheduler.cpp multi_model.cpp spill_model.cpp softbrain_gams.cpp
 	$(CXX) $(CXXFLAGS) -MD -c -o $@ $<
 
     
@@ -37,4 +37,5 @@ $(OBJ_DEST)/%.o: %.cpp $(INCLUDE_DEST)/%.h
 .phony: clean
 
 clean:
-	-rm -Rf $(LIB_DEST)/*.so $(LIB_DEST)/*.a *.o $(OBJ_DEST)/*.o *.d
+	-rm -Rf $(LIB_DEST)/*.so $(LIB_DEST)/*.a *.o $(OBJ_DEST)/*.o  *.d  $(OBJ_DEST)/*.d
+
