--- a/src/Makefile
+++ b/src/Makefile
@@ -1,19 +1,23 @@
+level=../
+include ../make.config
+
+
 SYS = $(shell sys)
 CXX = /s/gcc-5.1.0/@sys/bin/g++
 
-CXXFLAGS :=  -Wall -g -std=c++11 -O3 -lm $(FLAGS)
+CXXFLAGS :=  -Wall -g -std=c++11 -O0 -lm $(FLAGS)
 SOURCES= sbpdg.cpp schedule.cpp scheduler.cpp color_mapper.cpp
 
+EXTRA_GAMS=softbrain_gams.cpp timing_model.cpp multi_model.cpp spill_model.cpp 
+
 INCLUDE_DEST=../src
-LIB_DEST=../lib
-OBJ_DEST=../obj
+LIB_DEST=${build}/lib
+OBJ_DEST=${build}/obj
 
 PRE_OBJECTS=$(SOURCES:.cpp=.o)
 OBJECTS = $(patsubst %,$(OBJ_DEST)/%,$(PRE_OBJECTS))
 
-SRC_ROOT=../..
-LIB_SBMODEL_PATH=$(SRC_ROOT)/softbrain-config/lib
-INC_SBMODEL_PATH=$(SRC_ROOT)/softbrain-config/src
+INC_SBMODEL_PATH=${prefix}/include/softbrain-config/ 
 
 all: $(LIB_DEST)/libsbscheduler.a $(LIB_DEST)/libsbscheduler.so
 
@@ -27,7 +31,7 @@ $(LIB_DEST)/libsbscheduler.a: $(OBJECTS)
 $(LIB_DEST)/libsbscheduler.so: $(OBJECTS)
 	$(CXX) $(CXXFLAGS) -MD -shared -o $@ $^     
 
-$(OBJ_DEST)/scheduler.o: scheduler.cpp multi_model.cpp spill_model.cpp softbrain_gams.cpp
+$(OBJ_DEST)/scheduler.o: scheduler.cpp $(EXTRA_GAMS)
 	$(CXX) $(CXXFLAGS) -MD -c -o $@ $<
 
     
@@ -38,4 +42,6 @@ $(OBJ_DEST)/%.o: %.cpp $(INCLUDE_DEST)/%.h
 
 clean:
 	-rm -Rf $(LIB_DEST)/*.so $(LIB_DEST)/*.a *.o $(OBJ_DEST)/*.o  *.d  $(OBJ_DEST)/*.d
+
+include ../make.rules
 
