Definitions for dg emu functions added.

--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -26,6 +26,9 @@ stat-config : stat-config.cpp
 sb_sched : sb_sched.cpp
 	$(CXX) $(CXXFLAGS) -MD -o $@ $< -L$(LIB_PATH) -lsbconfig -lsbscheduler -Wl,-rpath,${prefix}/lib
 
+sb_dfg_emu : sb_dfg_emu.cpp
+	$(CXX) $(CXXFLAGS) -MD -o $@ $< -L$(LIB_PATH) -lsbconfig -lsbscheduler -Wl,-rpath,${prefix}/lib
+
 
 clean:
 	rm -rf *.o  sb_sched stat-config reschedule *.d
