--- a/src/Makefile
+++ b/src/Makefile
@@ -17,7 +17,7 @@ OBJ_DEST=${build}/obj
 PRE_OBJECTS=$(SOURCES:.cpp=.o)
 OBJECTS = $(patsubst %,$(OBJ_DEST)/%,$(PRE_OBJECTS))
 
-INC_SBMODEL_PATH=${prefix}/include/softbrain-config/ 
+INC_SBMODEL_PATH=/scratch/galliher/softbrain-stack/softbrain-config/src 
 
 all: $(LIB_DEST)/libsbscheduler.a $(LIB_DEST)/libsbscheduler.so
 
