--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -1,35 +1,33 @@
 level=../
-sb_config=../../
 include ../make.config
 
 SYS = $(shell sys)
-CXX = g++
+CXX = /s/gcc-5.1.0/@sys/bin/g++
 
 CXXFLAGS :=  -Wall -g -std=c++11
 
-LIB_SBMODEL_PATH=$(sb_config)softbrain-config/build/lib
-LIB_SBSCHED_PATH=$(level)build/lib
-INC_SBMODEL_PATH=$(sb_config)softbrain-config/src
-INC_SBSCHED_PATH=$(level)src
+LIB_PATH=$(prefix)/lib
+INC_SBMODEL_PATH=$(prefix)/include/softbrain-config
+INC_SBSCHED_PATH=$(prefix)/include/softbrain-scheduler
 
-CXXFLAGS += -I$(INC_SBMODEL_PATH) -I$(INC_SBSCHED_PATH) -Wl,-rpath,$(LIB_SBSCHED_PATH)
+CXXFLAGS += -I$(INC_SBMODEL_PATH) -I$(INC_SBSCHED_PATH) -Wl,-rpath,$(LIB_PATH) 
 
 #all: reschedule stat-config
 
-all: sb_sched sb_dfg_emu reschedule stat-config
+all: sb_sched reschedule stat-config
 
 
 reschedule : reschedule.cpp
-	$(CXX) $(CXXFLAGS) -MD -o $@ $< -L$(LIB_SBMODEL_PATH) -L$(LIB_SBSCHED_PATH) -lsbconfig -lsbscheduler -Wl,-rpath,${level}/lib
+	$(CXX) $(CXXFLAGS) -MD -o $@ $< -L$(LIB_PATH) -lsbconfig -lsbscheduler
 
 stat-config : stat-config.cpp
-	$(CXX) $(CXXFLAGS) -MD -o $@ $< -L$(LIB_SBMODEL_PATH) -L$(LIB_SBSCHED_PATH) -lsbconfig -lsbscheduler -Wl,-rpath,${level}/lib
+	$(CXX) $(CXXFLAGS) -MD -o $@ $< -L$(LIB_PATH) -lsbconfig -lsbscheduler
 
 sb_sched : sb_sched.cpp
-	$(CXX) $(CXXFLAGS) -MD -o $@ $< -L$(LIB_SBMODEL_PATH) -L$(LIB_SBSCHED_PATH) -lsbconfig -lsbscheduler -Wl,-rpath,${level}/lib
+	$(CXX) $(CXXFLAGS) -MD -o $@ $< -L$(LIB_PATH) -lsbconfig -lsbscheduler -Wl,-rpath,${prefix}/lib
 
-sb_dfg_emu : sb_dfg_emu.cpp
-	$(CXX) $(CXXFLAGS) -MD -o $@ $< -L$(LIB_SBMODEL_PATH) -L$(LIB_SBSCHED_PATH) -lsbconfig -lsbscheduler -Wl,-rpath,${level}/lib
+-sb_dfg_emu : sb_dfg_emu.cpp
+	$(CXX) $(CXXFLAGS) -MD -o $@ $< -L$(LIB_PATH) -lsbconfig -lsbscheduler -Wl,-rpath,${level}/lib
 
 
 clean:
