--- a/make.config
+++ b/make.config
@@ -5,7 +5,4 @@ CXX = /s/gcc-5.1.0/@sys/bin/g++
 CXXFLAGS :=  -Wall -g -std=c++11 -O3
 
 build ?= $(shell pwd)/${level}/build
-prefix ?= /scratch/galliher/softbrain-scheduler
-
-
-
+prefix ?= $(shell pwd)
