--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -14,7 +14,7 @@ CXXFLAGS += -I$(INC_SBMODEL_PATH) -I$(INC_SBSCHED_PATH) -Wl,-rpath,$(LIB_PATH)
 
 #all: reschedule stat-config
 
-all: sb_sched reschedule stat-config
+all: sb_sched reschedule stat-config sb_dfg_emu
 
 
 reschedule : reschedule.cpp
@@ -26,12 +26,12 @@ stat-config : stat-config.cpp
 sb_sched : sb_sched.cpp
 	$(CXX) $(CXXFLAGS) -MD -o $@ $< -L$(LIB_PATH) -lsbconfig -lsbscheduler -Wl,-rpath,${prefix}/lib
 
--sb_dfg_emu : sb_dfg_emu.cpp
+sb_dfg_emu : sb_dfg_emu.cpp
 	$(CXX) $(CXXFLAGS) -MD -o $@ $< -L$(LIB_PATH) -lsbconfig -lsbscheduler -Wl,-rpath,${level}/lib
 
 
 clean:
-	rm -rf *.o  sb_sched stat-config reschedule *.d
+	rm -rf *.o  sb_dfg_emu sb_sched stat-config reschedule *.d
 
 include ../make.rules
 
