--- a/src/Makefile
+++ b/src/Makefile
@@ -17,13 +17,14 @@ OBJ_DEST=${build}/obj
 PRE_OBJECTS=$(SOURCES:.cpp=.o)
 OBJECTS = $(patsubst %,$(OBJ_DEST)/%,$(PRE_OBJECTS))
 
+BOOST_PATH=${boost}
 INC_SBMODEL_PATH=${prefix}/include/softbrain-config/
 
 all: $(LIB_DEST)/libsbscheduler.a $(LIB_DEST)/libsbscheduler.so
 
 CXXFLAGS += -I$(INC_SBMODEL_PATH)
 
-CXXFLAGS += -I$(INCLUDE_DEST) -fPIC -lboost_regex
+CXXFLAGS += -I$(INCLUDE_DEST) -L$(BOOST_PATH) -fPIC -lboost_regex
 
 $(LIB_DEST)/libsbscheduler.a: $(OBJECTS)
 	ar crs $@ $^ 
