generic cxx in makefiles

--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -2,7 +2,7 @@ level=../
 include ../make.config
 
 SYS = $(shell sys)
-CXX = /s/gcc-5.1.0/@sys/bin/g++
+CXX = g++
 
 CXXFLAGS :=  -Wall -g -std=c++11
 
