--- a/src/Makefile
+++ b/src/Makefile
@@ -3,7 +3,7 @@ include ../make.config
 
 
 SYS = $(shell sys)
-CXX = /s/gcc-5.1.0/@sys/bin/g++
+CXX = g++
 
 CXXFLAGS :=  -Wall -g -std=c++11 -O3 -lm $(FLAGS)
 SOURCES= sbpdg.cpp schedule.cpp scheduler.cpp color_mapper.cpp
