--- a/make.config
+++ b/make.config
@@ -1,7 +1,7 @@
 MKDIR_P = mkdir -p
 
 SYS = $(shell sys)
-CXX = /s/gcc-5.1.0/@sys/bin/g++
+CXX = g++
 CXXFLAGS :=  -Wall -g -std=c++11 -O3
 
 build ?= $(shell pwd)/${level}/build
