--- a/src/Makefile
+++ b/src/Makefile
@@ -6,7 +6,7 @@ SYS = $(shell sys)
 CXX = g++
 
 CXXFLAGS :=  -Wall -g -std=c++11 -O0 -ggdb -gdwarf-3 -lm $(FLAGS)
-SOURCES= sbpdg.cpp schedule.cpp scheduler.cpp color_mapper.cpp scheduler_bk.cpp 
+SOURCES= sbpdg.cpp schedule.cpp scheduler.cpp color_mapper.cpp scheduler_bkt.cpp scheduler_greedy.cpp scheduler_mlg.cpp scheduler_sg.cpp scheduler_sa.cpp scheduler_gams.cpp 
 EXTRA_GAMS=softbrain_gams.cpp timing_model.cpp multi_model.cpp spill_model.cpp 
 
 INCLUDE_DEST=../src
