gams scheduler updates

--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -16,8 +16,8 @@ CXXFLAGS += -I$(INC_SBMODEL_PATH) -I$(INC_SBSCHED_PATH) -Wl,-rpath,$(LIB_PATH)
 
 #all: reschedule stat-config
 
-all: sb_sched stat-config sb_dfg_emu 
-#reschedule
+all: sb_sched
+#reschedul
 
 
 reschedule : reschedule.cpp
