dirs renamed to kill softbrain-

--- a/src/Makefile
+++ b/src/Makefile
@@ -26,7 +26,7 @@ PRE_OBJECTS=$(SOURCES:.cpp=.o)
 OBJECTS = $(patsubst %,$(OBJ_DEST)/%,$(PRE_OBJECTS))
 
 BOOST_PATH=${boost}
-INC_SBMODEL_PATH=${SS_TOOLS}/include/softbrain-config/
+INC_SBMODEL_PATH=${SS_TOOLS}/include/ss-config/
 
 all: $(LIB_DEST)/libsbscheduler.a $(LIB_DEST)/libsbscheduler.so
 
