minor makefile tweak

--- a/make.config
+++ b/make.config
@@ -1,8 +1,10 @@
 MKDIR_P = mkdir -p
 
+OPT=-O3
+
 SYS = $(shell sys)
 CXX = g++
-CXXFLAGS :=  -Wall -g -std=c++11 -O3
+CXXFLAGS := -Wall -g -std=c++11 $(OPT)
 
 build ?= $(shell pwd)/${level}/build
 prefix ?= $(shell pwd)
