--- a/src/Makefile
+++ b/src/Makefile
@@ -10,7 +10,10 @@ OPT ?= -O3
 #OPT = -Og
 #OPT = -O0
 
-CXXFLAGS :=  -Wall -g -std=c++11 $(OPT) -ggdb -gdwarf-3 -lm $(FLAGS)
+LEX = lex
+YACC = yacc -d
+
+CXXFLAGS :=  -Wall -g -std=c++11 $(OPT) -ggdb -gdwarf-3 -ly -ll -lm $(FLAGS)
 SOURCES= sbpdg.cpp schedule.cpp scheduler.cpp color_mapper.cpp scheduler_bkt.cpp scheduler_greedy.cpp scheduler_mlg.cpp scheduler_sg.cpp scheduler_sa.cpp scheduler_gams.cpp 
 
 GAMS_DIR=gams_models
@@ -23,7 +26,7 @@ OBJ_DEST=${build}/obj
 
 
 PRE_OBJECTS=$(SOURCES:.cpp=.o)
-OBJECTS = $(patsubst %,$(OBJ_DEST)/%,$(PRE_OBJECTS))
+OBJECTS = $(patsubst %,$(OBJ_DEST)/%,$(PRE_OBJECTS)) dfg-parser.tab.o dfg-lex.yy.o
 
 BOOST_PATH=${boost}
 INC_SBMODEL_PATH=${SS_TOOLS}/include/ss-config/
@@ -40,22 +43,35 @@ $(LIB_DEST)/libsbscheduler.a: $(OBJECTS)
 $(LIB_DEST)/libsbscheduler.so: $(OBJECTS)
 	$(CXX) $(CXXFLAGS) -MD -shared -o $@ $^     
 
-$(OBJ_DEST)/scheduler_gams.o: scheduler_gams.cpp $(GAMS_INC)
+$(OBJ_DEST)/scheduler_gams.o: scheduler_gams.cpp $(GAMS_INC) dfg-parser.tab.h
 	$(CXX) $(CXXFLAGS) -MD -c -o $@ $<
 
-
-    
-$(OBJ_DEST)/%.o: %.cpp $(INCLUDE_DEST)/%.h
+$(OBJ_DEST)/%.o: %.cpp $(INCLUDE_DEST)/%.h dfg-parser.tab.h
 	$(CXX) $(CXXFLAGS) -MD -c -o $@ $<
 
 $(GAMS_DIR)/%.h: $(GAMS_DIR)/%.gms
 	xxd -i $< > $@
 
 
+#-------- stuff to do with dfg-parser/lexer -----------
+dfg-parser.tab.o: dfg-parser.tab.c sbpdg.h
+	$(CXX) $(filter-out -Wall, $(CXXFLAGS)) -c -o $@ $<
+
+dfg-lex.yy.o: dfg-lex.yy.c
+	$(CXX) $(filter-out -Wall, $(CXXFLAGS)) -c -o $@ $<
+
+dfg-parser.tab.c dfg-parser.tab.h: dfg-parser.y
+	$(YACC) -o dfg-parser.tab.c -v $^
+
+dfg-lex.yy.c: dfg-parser.l dfg-parser.tab.h
+	$(LEX) -o dfg-lex.yy.c $<
+#----------------------------------------
+
+
 .phony: clean
 
 clean:
-	-rm -Rf $(LIB_DEST)/*.so $(LIB_DEST)/*.a *.o $(OBJ_DEST)/*.o  *.d  $(OBJ_DEST)/*.d  $(GAMS_INC)
+	-rm -Rf $(LIB_DEST)/*.so $(LIB_DEST)/*.a *.o $(OBJ_DEST)/*.o  *.d  $(OBJ_DEST)/*.d  $(GAMS_INC) dfg-lex.yy.c dfg-lex.yy.o *.tab.*  dfg-parser *.output
 
 include ../make.rules
 
