in progress newscheduler2

--- a/make.config
+++ b/make.config
@@ -6,6 +6,8 @@ SYS = $(shell sys)
 CXX = g++
 CXXFLAGS := -Wall -g -std=c++11 $(OPT)
 
+LIBS = -ltcmalloc
+
 build ?= $(shell pwd)/${level}/build
 prefix ?= $(shell pwd)
 boost ?= /usr/lib64
