BOOST serialization based pdg's working

--- a/make.config
+++ b/make.config
@@ -6,7 +6,7 @@ SYS = $(shell sys)
 CXX = g++
 CXXFLAGS := -Wall -g -std=c++11 $(OPT)
 
-LIBS = -lprofiler -ltcmalloc
+LIBS = -lprofiler -ltcmalloc -lboost_serialization
 
 build ?= $(shell pwd)/${level}/build
 prefix ?= $(shell pwd)
