--- a/make.config
+++ b/make.config
@@ -10,7 +10,7 @@ SYS = $(shell sys)
 CXX = g++
 CXXFLAGS = -Wall -g -ggdb -gdwarf-3 -std=c++11 $(OPT) $(DEPFLAGS)
 
-LIBS = -lprofiler -ltcmalloc -lboost_serialization
+LIBS = -lprofiler -ltcmalloc -lboost_regex -lboost_serialization
 
 build ?= $(shell pwd)/${level}/build
 prefix ?= $(shell pwd)
