StochasticGreedy scheduler removed, goodbye friend

--- a/src/scheduler/Makefile
+++ b/src/scheduler/Makefile
@@ -13,7 +13,7 @@ OPT ?= -O3
 LEX = lex
 YACC = yacc -d
 
-SOURCES= sbpdg.cpp schedule.cpp scheduler.cpp color_mapper.cpp scheduler_sg.cpp scheduler_sa.cpp scheduler_gams.cpp serialize-schedule.cpp serialize-sbpdg.cpp
+SOURCES= sbpdg.cpp schedule.cpp scheduler.cpp color_mapper.cpp scheduler_sa.cpp scheduler_gams.cpp serialize-schedule.cpp serialize-sbpdg.cpp
 
 GAMS_DIR=gams_models
 GAMS_FILES=$(wildcard gams_models/*.gms)
