Change "SB" to "ss"; "pdg" -> "dfg" (#7)
* get rid of sb in filenames in src/

* delete unnecessary file

* a full clean exposes more prob.

* SbPDG -> SSDfg; SbPDG_Node -> SSDfgNode

* SbPDG_Edge -> SSDfgEdge

* SbPDG_* -> SSDfg_*

* SbModel -> SSModel

* Totally get rid of "Sb"

* Totally get rid of "Sb"

* SB_CONFIG -> SS_CONFIG

* SB_CONFIG -> SS_CONFIG

* I think I made all SB -> SS and sb -> ss

--- a/test_config/Makefile
+++ b/test_config/Makefile
@@ -1,7 +1,7 @@
 prefix?=$(shell pwd)/../
 
 SYS = $(shell sys)
-CXX = /s/gcc-5.1.0/@sys/bin/g++
+CXX = g++
 
 client.out : client.cpp
 	$(CXX) -g -std=c++11  -MD -o $@ $< -I${prefix}/src  -L${prefix}/lib -lsbconfig -Wl,-rpath,${prefix}/lib
