--- a/src/config/Makefile
+++ b/src/config/Makefile
@@ -1,9 +1,9 @@
 level=../../
 include ${level}/make.config
 
-SOURCES= model.cpp model_parsing.cpp fu_model.cpp sub_model.cpp direction.cpp ssinst.cpp
+SOURCES= model.cpp model_parsing.cpp fu_model.cpp sub_model.cpp direction.cpp sbinst.cpp
 PRE_OBJECTS=$(SOURCES:.cpp=.o)
-INST_MODEL_FILE=full.ssinst
+INST_MODEL_FILE=full.sbinst
 
 LIB_DEST=${build}/lib
 OBJ_DEST=${build}/obj
@@ -15,25 +15,25 @@ OBJECTS = $(patsubst %,$(OBJ_DEST)/%,$(PRE_OBJECTS))
 
 CXXFLAGS += -fPIC
 
-all: directories ssinst.cpp $(LIB_DEST)/libssconfig.a $(LIB_DEST)/libssconfig.so 
+all: directories sbinst.cpp $(LIB_DEST)/libsbconfig.a $(LIB_DEST)/libsbconfig.so 
 
-$(LIB_DEST)/libssconfig.a: $(OBJECTS)
+$(LIB_DEST)/libsbconfig.a: $(OBJECTS)
 	ar crs $@ $^
     
-$(LIB_DEST)/libssconfig.so: $(OBJECTS)
+$(LIB_DEST)/libsbconfig.so: $(OBJECTS)
 	$(CXX) $(CXXFLAGS) -MD -shared -o $@ $^ $(LIBS)
 
 
-ssinst.cpp: ssinst.h $(INST_HEADERS)
+sbinst.cpp: sbinst.h $(INST_HEADERS)
 	@echo "done"
 
 #don't use autodeps for this, because generated files are hard
-ssinst.h: inst_model.cpp inst_model.h model_parsing.cpp $(INST_HEADERS) $(INST_MODEL_FILE)
+sbinst.h: inst_model.cpp inst_model.h model_parsing.cpp $(INST_HEADERS) $(INST_MODEL_FILE)
 	$(CXX) $(CXXFLAGS) -MD inst_model.cpp model_parsing.cpp -o inst_model
 	@$(POSTCOMPILE)
-	./inst_model $(INST_MODEL_FILE) ssinst.h ssinst.cpp
+	./inst_model $(INST_MODEL_FILE) sbinst.h sbinst.cpp
     
-$(OBJ_DEST)/%.o: %.cpp %.h ssinst.h $(DEPDIR)/%.d
+$(OBJ_DEST)/%.o: %.cpp %.h sbinst.h $(DEPDIR)/%.d
 	$(CXX) $(CXXFLAGS) -MD -c -o $@ $<
 	@$(POSTCOMPILE)
 
@@ -42,6 +42,6 @@ include $(wildcard $(patsubst %,$(DEPDIR)/%.d,$(basename $(SOURCES))))
 .phony: clean
 
 clean:
-	-rm -Rf libssconfig.a *.o ssinst.cpp ssinst.h $(LIB_DEST)/*.a $(LIB_DEST)/*.so $(OBJ_DEST)/*.o *.d
+	-rm -Rf libsbconfig.a *.o sbinst.cpp sbinst.h $(LIB_DEST)/*.a $(LIB_DEST)/*.so $(OBJ_DEST)/*.o *.d
 
 include ${level}/make.rules
