--- a/test_config/Makefile
+++ b/test_config/Makefile
@@ -1,7 +1,7 @@
 prefix?=$(shell pwd)/../
 
 SYS = $(shell sys)
-CXX = g++
+CXX = /s/gcc-5.1.0/@sys/bin/g++
 
 client.out : client.cpp
 	$(CXX) -g -std=c++11  -MD -o $@ $< -I${prefix}/src  -L${prefix}/lib -lsbconfig -Wl,-rpath,${prefix}/lib
