fix destination pass thru (#22)

--- a/make.config
+++ b/make.config
@@ -10,7 +10,7 @@ SYS = $(shell sys)
 CXX = g++
 CXXFLAGS = -Wall -g -ggdb -gdwarf-3 -std=c++11 $(OPT) $(DEPFLAGS)
 
-LIBS = -lprofiler -ltcmalloc -lboost_serialization -Wl,-no-as-needed -lyaml-cpp
+LIBS = -ltcmalloc -lboost_serialization -Wl,-no-as-needed -lyaml-cpp -lprofiler
 
 build ?= $(shell pwd)/${level}/build
 prefix ?= $(shell pwd)
