codesign algorithm and datastructures (#36)
* plausible multi-scheduling interface + get rid of _fus[][] and _switches[][] from all code except bulding the array

* deep copy of ssmodel + swap the ssmodel for a schedule + proof of concept reschedule

* develop codesignInstance class

* copy + switch/link deletion + incremental schedule

* fix area/power for dedi router and add a/p for vport

--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -18,7 +18,7 @@ LOCAL_LIBS = -ly -lfl -lssscheduler -lssconfig -lyaml-cpp $(LIBS)
 
 all: ss_sched 
 
-ss_sched : ss_sched.cpp $(INC_SSMODEL_PATH)/*.h
+ss_sched : ss_sched.cpp $(INC_SSMODEL_PATH)/*.h $(INC_SSSCHED_PATH)/*.h
 	$(CXX) $(CXXFLAGS) -o $@ $< -L$(LIB_PATH) $(LOCAL_LIBS)  -Wl,-rpath,${SS_TOOLS}/lib
 
 
