--- a/test_config/Makefile
+++ b/test_config/Makefile
@@ -1,4 +1,4 @@
-prefix?=$(shell pwd)/../
+prefix?=$(SS_TOOLS)/lib
 
 SYS = $(shell sys)
 CXX = g++
@@ -7,4 +7,7 @@ client.out : client.cpp
 	$(CXX) -g -std=c++11  -MD -o $@ $< -I${prefix}/src  -L${prefix}/lib -lsbconfig -Wl,-rpath,${prefix}/lib
 
 clean:
-	rm -rf *.o  client.out *.d
+	rm -rf *.o  *.out *.d
+
+test_area_power.out: %.out: %.cpp
+	$(CXX) -g -std=c++11  -MD -o $@ $< -I${prefix}/src ${prefix}/libssconfig.a -lm -lz
